[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemy1.gd" type="Script" id=2]

[node name="Enemy1" groups=[
"enemies",
] instance=ExtResource( 1 )]

z_index = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility", "Z Index" ]
speed = 300
health = 12
scale_decrease = Vector2( 0.05, 0.05 )
points = 1

[node name="Sprite" parent="." index="1"]

modulate = Color( 0, 0.215686, 0.498039, 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="SpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Enemy1_area_entered"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


